{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 10,
  "lineage": "098ca8cc-5ca7-9d03-f1d6-a3733813b86c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-049489eedd06534ea",
            "id": "rtb-049489eedd06534ea",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022b9fcf28dccd4a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-hshdim-dev-an2-pri"
            },
            "tags_all": {
              "Name": "rtb-hshdim-dev-an2-pri"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pri-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-03b82f1588cfe66f1",
            "id": "rtb-03b82f1588cfe66f1",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022b9fcf28dccd4a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-hshdim-dev-an2-pri-db"
            },
            "tags_all": {
              "Name": "rtb-hshdim-dev-an2-pri-db"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:route-table/rtb-0e2ef65b636115d95",
            "id": "rtb-0e2ef65b636115d95",
            "owner_id": "156736685434",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a599b2dd6f826e98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-hshdim-dev-an2-pub"
            },
            "tags_all": {
              "Name": "rtb-hshdim-dev-an2-pub"
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri-db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-02bdcaae6b864ac42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.192/27",
            "id": "subnet-02bdcaae6b864ac42",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2a-pri-db"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2a-pri-db"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri-db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-0c27fef04f315e719",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.224/27",
            "id": "subnet-0c27fef04f315e719",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2c-pri-db"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2c-pri-db"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-0ec6c6c307e6e1f55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.64/26",
            "id": "subnet-0ec6c6c307e6e1f55",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2a-pri"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2a-pri"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pri2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-015220e6b5b9387d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.128/26",
            "id": "subnet-015220e6b5b9387d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2c-pri"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2c-pri"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-0f015e5d31dde3aa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/27",
            "id": "subnet-0f015e5d31dde3aa8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2a-pub"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2a-pub"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:subnet/subnet-008f5b347fd7dd190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.0.32/27",
            "id": "subnet-008f5b347fd7dd190",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "156736685434",
            "tags": {
              "Name": "sn-hshdim-dev-an2c-pub"
            },
            "tags_all": {
              "Name": "sn-hshdim-dev-an2c-pub"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-015fd62ff2e231200"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:156736685434:vpc/vpc-015fd62ff2e231200",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-093b1921b9ba0e482",
            "default_route_table_id": "rtb-0567aa7ac954bbb17",
            "default_security_group_id": "sg-0e15198ed79eff88c",
            "dhcp_options_id": "dopt-0c2379b7fe7ee86bd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-015fd62ff2e231200",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0567aa7ac954bbb17",
            "owner_id": "156736685434",
            "tags": {
              "AppTier": "vpc",
              "Application": "vpc",
              "Backup": "no",
              "Environment": "dev",
              "Name": "vpc-hshdim-dev-an2"
            },
            "tags_all": {
              "AppTier": "vpc",
              "Application": "vpc",
              "Backup": "no",
              "Environment": "dev",
              "Name": "vpc-hshdim-dev-an2"
            }
          }
        }
      ]
    }
  ]
}